# cortex

./: .replit  Pasted--13-23-21-587-Log-Level-2-13-23-21-590-VS-Code-version-0-41-2-13-23-21-590-Remote-SSH-version-1727036743416.txt  Pasted-024-16-38-34-GET-usage-dashboard-HTTP-1-1-200-INFO-werkzeug-172-31-196-112-22-Sep-2024-16-1727023164490.txt  Pasted-INFO-werkzeug-172-31-196-112-22-Sep-2024-16-36-50-GET-static-js-main-028082e5-js-HTTP-1-1-3-1727023060453.txt  README.md  package-lock.json  package.json  pyproject.toml  replit.nix
backend/: main.py  models.py
backend/api_handlers/: google_nlp_handler.py  huggingface_handler.py  openai_handler.py
backend/utils/: rate_limiter.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ApiSelector.js  Auth.js  InputForm.js  Navigation.js  ResultDisplay.js  UsageDashboard.css  UsageDashboard.js  UserProfile.js
migrations/versions/: d2e74da1ae67_increase_password_hash_column_length.py
